--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@rubenpazch/lbyte-components",
   "version": "0.1.1",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@babel/cli": "^7.21.5",
     "@testing-library/jest-dom": "^5.16.5",
