--- a/package.json
+++ b/package.json
@@ -83,10 +83,7 @@
   },
   "description": "The Storybook design system tutorial is a subset of the full [Storybook design system](https://github.com/storybookjs/design-system/), created as a learning resource for those interested in learning how to write and publish a design system using best in practice techniques.",
   "main": "dist/index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lbyteperu/lbyte-components.git"
-  },
+  "repository": "git+https://github.com/lbyteperu/lbyte-components.git",
   "keywords": [
     "lbyte-components"
   ],
