--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "empty-project",
+  "name": "@rubenpazch/lbyte-components",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/bundle.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
