--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -37,5 +37,5 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           yarn install --frozen-lockfile
-          yarn build
+          yarn build-prod
           yarn release
