--- a/package.json
+++ b/package.json
@@ -34,14 +34,15 @@
     "@storybook/testing-library": "^0.0.14-next.2",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "auto": "^10.46.0",
     "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.4",
     "storybook": "^7.0.13",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "webpack": "^5.83.1",
     "webpack-cli": "^5.1.1",
-    "webpack-dev-server": "^4.15.0",
-    "css-loader": "^6.7.4",
-    "style-loader": "^3.3.3"
+    "webpack-dev-server": "^4.15.0"
   }
 }
