--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build-prod": "webpack --mode production",
     "start": "webpack serve --hot --mode development",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "release": "auto shipit --base-branch=main"
   },
   "dependencies": {
     "react": "^18.2.0",
