--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@rubenpazch/lbyte-components",
   "version": "1.0.1",
   "description": "",
-  "main": "dist/bundle.js",
+  "main": "dist/index",
+  "typings": "dist/index",
   "keywords": [],
   "author": {
     "email": "rubenpazchuspe@outlook.com",
