--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.5",
   "description": "",
   "main": "dist/index",
-  "typings": "dist/index",
+  "types": "index.d.ts",
   "keywords": [],
   "author": {
     "email": "rubenpazchuspe@outlook.com",
@@ -37,8 +37,10 @@
     "@storybook/react": "^7.0.13",
     "@storybook/react-webpack5": "^7.0.13",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/node": "^20.2.3",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/webpack": "^5.28.1",
     "auto": "^10.46.0",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.4",
