--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,20 +4,22 @@
         "sourceMap": true,
         "strict": true,
         "noImplicitReturns": true,
-        "noImplicitAny": false,
-        "module": "es6",
+        "noImplicitAny": true,
+        "declaration": true,
+        "module": "commonjs",
         "moduleResolution": "node",
         "target": "es5",
         "allowJs": true,
         "jsx": "react",
         "allowSyntheticDefaultImports": true,
         "typeRoots": [
-            "typings",
+            "src/typings",
             "node_modules/@types"
         ],
+        "rootDir": "."
     },
     "include": [
         "./src/**/*",
-        "index.d.ts",
+        "index.d.ts", "src/index.ts",
     ]
 }
