--- a/package.json
+++ b/package.json
@@ -2,54 +2,48 @@
   "name": "@rubenpazch/lbyte-components",
   "version": "1.0.6",
   "description": "",
-  "main": "dist/index",
-  "types": "index.d.ts",
+  "main": "index.js",
   "keywords": [],
   "author": {
     "email": "rubenpazchuspe@outlook.com",
     "name": "Ruben Paz Chuspe"
   },
+  "type": "module",
   "license": "ISC",
   "scripts": {
     "clean": "rm dist/index.js",
-    "build-dev": "webpack --mode development",
-    "build-prod": "webpack --mode production",
-    "start": "webpack serve --hot --mode development",
+    "release": "auto shipit --base-branch=main",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "release": "auto shipit --base-branch=main"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hot-loader": "^4.13.1"
+    "build-lib": "rollup -c"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.21.5",
-    "@hot-loader/react-dom": "^17.0.2+4.13.0",
-    "@storybook/addon-essentials": "^7.0.13",
-    "@storybook/addon-interactions": "^7.0.13",
-    "@storybook/addon-links": "^7.0.13",
-    "@storybook/blocks": "^7.0.13",
-    "@storybook/react": "^7.0.13",
-    "@storybook/react-webpack5": "^7.0.13",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@storybook/addon-essentials": "^7.0.14",
+    "@storybook/addon-interactions": "^7.0.14",
+    "@storybook/addon-links": "^7.0.14",
+    "@storybook/blocks": "^7.0.14",
+    "@storybook/react": "^7.0.14",
+    "@storybook/react-webpack5": "^7.0.14",
     "@storybook/testing-library": "^0.0.14-next.2",
-    "@types/node": "^20.2.3",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
-    "@types/webpack": "^5.28.1",
     "auto": "^10.46.0",
-    "babel-loader": "^9.1.2",
     "css-loader": "^6.7.4",
-    "storybook": "^7.0.13",
-    "style-loader": "^3.3.3",
-    "ts-loader": "^9.4.2",
-    "typescript": "^5.0.4",
-    "webpack": "^5.83.1",
-    "webpack-cli": "^5.1.1",
-    "webpack-dev-server": "^4.15.0"
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rollup": "^3.23.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "storybook": "^7.0.14",
+    "style-loader": "^3.3.3"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
